syntax = "proto3";
package cheqdid.cheqdnode.cheqd.v1;
import "google/protobuf/any.proto";

option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types";

message StateValue {
  google.protobuf.Any data = 1;
  Metadata metadata = 2; // optional
}

// metadata
message Metadata {
  string created = 1;
  string updated = 2;
  bool deactivated = 3;
  string version_id = 4;
}
